Fixed wrapping on columns

--- a/sass/columns.sass
+++ b/sass/columns.sass
@@ -10,7 +10,7 @@ $border: 1px
   flex: 1
 
 kb-column
-  flex-grow: 1
+  flex: 1 1 0px
   min-width: 300px
   float: left
   min-height: 100px
